@@ -3205,7 +3205,11 @@ int msWFSParseRequest(mapObj *map, cgiRequestObj *request, owsRequestObj *ows_re
             if (pszValue)
               wfsparams->nStartIndex = atoi(pszValue);
             
-             /* free typname and filter. There may have been */
+            pszValue = xmlGetProp(rootnode, (xmlChar *)"outputFormat");
+            if (pszValue)
+              wfsparams->pszOutputFormat = msStrdup(pszValue);            
+
+            /* free typename and filter. There may have been */
             /* values if they were passed in the URL */
             if (wfsparams->pszTypeName)    
               free(wfsparams->pszTypeName);
@@ -3412,10 +3416,15 @@ int msWFSParseRequest(mapObj *map, cgiRequestObj *request, owsRequestObj *ows_re
                 if (pszValue)
                   wfsparams->nMaxFeatures = atoi(pszValue);
 
-                 pszValue = CPLGetXMLValue(psGetFeature,  "startIndex",
+                pszValue = CPLGetXMLValue(psGetFeature,  "startIndex",
                                                  NULL);
                 if (pszValue)
                   wfsparams->nStartIndex = atoi(pszValue);
+
+                pszValue = CPLGetXMLValue(psGetFeature, "outputFormat", 
+                                                 NULL);
+                if (pszValue)
+                  wfsparams->pszOutputFormat = msStrdup(pszValue);
 
                 psQuery = CPLGetXMLNode(psGetFeature, "Query");
                 if (psQuery)
